[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-search-mcp"
version = "0.1.1"
description = "MCP server for Reverse Image Search using PicImageSearch"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastmcp",
    "PicImageSearch",
    "uvicorn"
]

[project.scripts]
image-search-mcp = "image_search_mcp.main:main"

[tool.setuptools.packages.find]
where = ["src"]
